// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextWithIcon /> should render 1`] = `
<div
  className="mfui-text-with-icon"
>
  <Grid>
    <GridColumn
      desktop="6"
      mobile="12"
      tablet="7"
      wide="6"
    >
      <TextWithIconItem
        icon={
          <test-file-stub
            style={
              Object {
                "fill": "#00B956",
              }
            }
          />
        }
        key="1"
        text="First item"
      />
      <TextWithIconItem
        icon={
          <test-file-stub
            style={
              Object {
                "fill": "#00B956",
              }
            }
          />
        }
        key="2"
        text="Second item"
      />
    </GridColumn>
  </Grid>
</div>
`;

exports[`<TextWithIcon /> should render with props 1`] = `
<div
  className="mfui-text-with-icon test-class"
>
  <Header
    as="h5"
    className="mfui-text-with-icon__header"
  >
    Test title
  </Header>
  <TextWithIconItem
    icon={
      <test-file-stub
        style={
          Object {
            "fill": "#00B956",
          }
        }
      />
    }
    key="1"
    text="First item"
  />
  <TextWithIconItem
    icon={
      <test-file-stub
        style={
          Object {
            "fill": "#00B956",
          }
        }
      />
    }
    key="2"
    text="Second item"
  />
</div>
`;
